gcc/testsuite/rust/rustc/ui/error-codes/E0109.rs
type X = u32<i32>; // { dg-error ".E0109." "" { target *-*-* } }

fn main() {
}

